[package]
name = "dead-good-html-to-rsx-converter-web"
version = "0.4.5"
authors = ["Billie Thompson <billie@billiecodes.com>"]
edition = "2021"
license = "Unlicense"
repository = "https://github.com/PurpleBooth/dead-good-html-to-rsx-converter-web"
keywords = ["html", "rsx", "rust", "web"]
description = "A web interface for the dead-good-html-to-rsx-converter"
readme = "README.md"
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "dead-good-html-to-rsx-converter-web"
path = "src/bin/dead-good-html-to-rsx-converter-web.rs"

[dependencies]
dioxus = { version = "0.4" }
serde = { version = "1.0.190", features = ["derive"] }

# Debug
log = "0.4.20"
dioxus-logger = "0.4.1"
futures-util = "0.3.29"
rsx-rosetta = { version = "0.4.0" }
html_parser = "0.7.0"
dioxus-autofmt = "0.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tower-http = { version = "0.4.4", features = ["tracing", "compression-br", "compression-deflate", "compression-gzip", "compression-zstd"] }
# Shuttle
miette = { version = "5.10.0" }
shuttle-runtime = { version = "0.31.0", features = ["next", "tracing-subscriber"] }
shuttle-axum = { version = "0.39.0" }
shuttle-secrets = { version = "0.34.0" }
tokio = { version = "1.33.0", features = ["full"] }
axum = { version = "0.6.20" }
dioxus-fullstack = { version = "0.4", features = ["ssr", "axum", "router"] }
dioxus-router = { version = "0.4", features = ["ssr"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-router = { version = "0.4", features = ["web"] }
dioxus-fullstack = { version = "0.4", features = ["web", "router"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[features]
default = []
